// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - SurveyForm redirects after submit form 1`] = `
<Redirect
  to={
    Object {
      "pathname": "/final",
      "state": Object {
        "isSuccessSave": undefined,
        "saveErrorMessage": undefined,
      },
    }
  }
/>
`;

exports[`COMPONENT - SurveyForm renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="StyledGrommet-sc-19lkkz7-0 eUfLDp"
  >
    <div
      className="sc-bZQynM eCWoqb"
    >
      <div
        className="sc-EHOje dYFYCA FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
      >
        <label
          className="StyledText-sc-1sadyjn-0 bMXxti"
        >
          Test question?
        </label>
        <div
          className="StyledBox-sc-13pk1d4-0 gZSidW"
        >
          <div
            className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
          >
            <input
              autoComplete="off"
              className="StyledTextInput-sc-1x30a0s-0 cyWwXE"
              name="testName"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="StyledBox-sc-13pk1d4-0 dNgQiZ"
  >
    <button
      className="sc-bdVaJa hZuWlY StyledButton-sc-323bzc-0 bmExQD"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      size="large"
      type="submit"
    >
      submit
    </button>
  </div>
</form>
`;

exports[`COMPONENT - SurveyForm renders correctly with errors 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="sc-dnqmqq kqTqqP"
  />
  <div
    className="StyledGrommet-sc-19lkkz7-0 eUfLDp"
  >
    <div
      className="sc-bZQynM eCWoqb"
    >
      <div
        className="sc-EHOje dYFYCA FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
      >
        <label
          className="StyledText-sc-1sadyjn-0 bMXxti"
        >
          Test question?
        </label>
        <div
          className="StyledBox-sc-13pk1d4-0 fVtecF"
        >
          <div
            className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
          >
            <input
              autoComplete="off"
              className="StyledTextInput-sc-1x30a0s-0 cyWwXE"
              name="testName"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              value=""
            />
          </div>
        </div>
        <span
          className="StyledText-sc-1sadyjn-0 khlXyF"
        >
          error
        </span>
      </div>
    </div>
  </div>
  <div
    className="StyledBox-sc-13pk1d4-0 dNgQiZ"
  >
    <button
      className="sc-bdVaJa hZuWlY StyledButton-sc-323bzc-0 bmExQD"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      size="large"
      type="submit"
    >
      submit
    </button>
  </div>
</form>
`;
